<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    style="@style/scrollbar_shape_style"
    android:scrollbarAlwaysDrawHorizontalTrack="true"
    >


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        tools:context="com.bmcarr.unperishable.view.EditItem"
        >

        <EditText
            android:id="@+id/editItem_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_name"
            />
        <EditText
            android:id="@+id/editItem_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_owner_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textSize="20sp"/>
        <Spinner
            android:id="@+id/editItem_quantity_spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="20sp"/>
        <Spinner
            android:id="@+id/editItem_category_spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:prompt="@string/category"/>

        <TextView
            android:id="@+id/editItem_input_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_input_date"
            android:textSize="20sp"/>


        <!--<DatePicker-->
            <!--android:id="@+id/editItem_input_date"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:calendarViewShown="false"-->
            <!--/>-->

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editItem_input_date" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/current_date_button"
                android:text="Change Date"
                android:textSize="10sp"
                android:singleLine="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/editItem_expiration_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_expiration_date"
            android:textSize="20sp"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EditItem_expiration_date" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/experation_date_button"
                android:text="Change Date"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/editItem_finish_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_item_button"/>



            <Button
                android:id="@+id/editItem_cancel_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_add_item_button"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>